tests/NormalTests/paczka1/fuzzy1/77911448.err
Error in line 2: jpRghLvK S374 82,0
Error in line 5: dD2ucM9nz S374 11,5
Error in line 33: A20 S31 -2,1
Error in line 35: S2YmQpvzsg S31 39,3
